--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "test": "node /tests/example.js"
   },
   "dependencies": {
+    "connect": "*",
     "lodash": "*",
     "node-pipeline": "*"
     },
