--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pipeline-router",
-   "version": "0.5.5",
+   "version": "0.5.6",
    "main": "index",
    "description": "Simplified and fast routing for your server without an accompanying framework.",
    "keywords": [
@@ -32,7 +32,7 @@
   },
   "dependencies": {
     "formaline": "*",
-    "lodash": "*",
+    "lodash": "0.7.0",
     "node-pipeline": "*"
     },
   "devDependencies": {
