--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "dependencies": {
     "formidable": "1.0.14",
-    "lodash": "1.2.1",
+    "lodash": "~2.0.0",
     "node-pipeline": "0.5.x"
   },
   "devDependencies": {
