--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "node": ">=0.6.0"
   },
   "scripts": {
-    "test": "tape tests/*"
+    "test": "tape tests/*",
+    "postinstall": "lodash include=each,last,isString,isArray,last,find,pick,extend exports=node",
+    "preinstall": "npm install lodash-cli -g"
   },
   "dependencies": {
     "formidable": "1.0.14",
