added guid to all httpContexts for tracking through lifecycle

--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "formidable": "1.0.14",
     "node-pipeline": "~0.5.2",
     "lodash": "~2.2.0",
-    "hammock": "~0.1.1"
+    "hammock": "~0.1.1",
+    "guid": "0.0.10"
   },
   "devDependencies": {
     "optimist": "*",
