--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pipeline-router",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "main": "index",
   "description": "Simplified and fast routing for your server without an accompanying framework.",
   "keywords": [
@@ -45,14 +45,35 @@
   "homepage": "http://vastdevblog.vast.com/",
   "testling": {
     "browsers": {
-      "ie": [ 8, 9, 10 ],
-      "ff": [ 25, "nightly" ],
-      "chrome": [ 31, "canary" ],
-      "safari": [ 5.1 ],
-      "android-browser": [ 4.2 ],
-      "opera": [ 17, "next" ],
-      "iphone": [ 6 ],
-      "ipad": [ 6 ]
+      "ie": [
+        8,
+        9,
+        10
+      ],
+      "ff": [
+        25,
+        "nightly"
+      ],
+      "chrome": [
+        31,
+        "canary"
+      ],
+      "safari": [
+        5.1
+      ],
+      "android-browser": [
+        4.2
+      ],
+      "opera": [
+        17,
+        "next"
+      ],
+      "iphone": [
+        6
+      ],
+      "ipad": [
+        6
+      ]
     },
     "files": "tests/*.js"
   }
