--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "node-pipeline": "~0.5.2",
     "lodash": "~2.2.0",
     "hammock": "~0.1.1",
-    "guid": "tommydudebreaux/guid"
+    "guid": "0.0.11"
   },
   "devDependencies": {
     "optimist": "*",
