--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
   },
   "dependencies": {
     "formidable": "1.0.14",
-    "node-pipeline": "~1.0.1",
-    "lodash": "~2.4.1",
+    "guid": "0.0.11",
     "hammock": "~0.1.5",
-    "guid": "0.0.11"
+    "lodash": "~2.4.1",
+    "mkdirp": "^0.5.0",
+    "node-pipeline": "~1.0.1"
   },
   "devDependencies": {
     "optimist": "*",
